# chat-app

./: .gitignore  Cargo.toml
services/accounts/: Cargo.toml  Dockerfile
services/accounts/src/: controllers.rs  main.rs  models.rs
