[package]
name = "service-accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = "4.4.0"
default-features = false
features = ["compress-brotli", "compress-gzip", "compress-zstd", "macros"]

[dependencies.chrono]
version = "0.4.31"
default-features = false
features = ["clock", "serde"]

[dependencies.redis]
version = "0.23.3"
default-features = false
features = ["json", "tokio-comp"]

[dependencies.serde]
version = "1.0.190"
default-features = false
features = ["derive"]

[dependencies.uuid]
version = "1.5.0"
default-features = false
features = ["serde", "v4"]

[features]
default = ["v1alpha1"]
v1alpha1 = []

[profile.release]
lto = true
opt-level = 3
panic = "abort"